--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+		   <groupId>javax.xml.bind</groupId>
+		   <artifactId>jaxb-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
