--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 		   <groupId>javax.xml.bind</groupId>
 		   <artifactId>jaxb-api</artifactId>
 		</dependency>
+		<dependency>
+  			<groupId>org.modelmapper</groupId>
+  			<artifactId>modelmapper</artifactId>
+  			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
