--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,6 @@
 		<dependency>
   			<groupId>org.modelmapper</groupId>
   			<artifactId>modelmapper</artifactId>
-  			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
@@ -87,4 +86,13 @@
 	</build>
 
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.modelmapper</groupId>
+				<artifactId>modelmapper</artifactId>
+				<version>2.3.0</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
